--- a/.travis.yml
+++ b/.travis.yml
@@ -5,22 +5,24 @@ language:
   node_js
 
 node_js:
-  - lts/*
+  lts/*
 
 install:
-  - ./.travis/install.sh
+  make install
 
 before_script:
-  - ./.travis/verify.sh
-  - ./.travis/lint.sh
+  make production
 
 script:
-  - ./.travis/build.sh
+  make lint
+
+before_deploy:
+  make minify
 
 deploy:
   provider: script
   skip_cleanup: true
-  script: ./.travis/deploy.sh
+  script: make deploy
 
 notifications:
   slack:
