--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_deploy:
 deploy:
   provider: pages
   skip_cleanup: true
+  github_token: $GITHUB_TOKEN
   local_dir: dist
 
 after_deploy:
