Temporarily resolving Travis CI deployment issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
 
 before_deploy:
   - make minify
-  - cp -f dist/vault.html dist/404.html # TEMP: https://github.com/travis-ci/dpl/issues/912
+  - unlink dist/404.html && cp -f dist/vault.html dist/404.html # TEMP: https://github.com/travis-ci/dpl/issues/912
 
 deploy:
   provider: pages
