--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 
   "dependencies": {
     "eslint": "5.x",
+    "cssnano": "4.x",
+    "postcss-cli": "6.x",
     "html-minifier": "4.x",
     "nunjucks": "3.x",
     "yargs": "13.x"
